--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,12 @@
         <variable
             name="model"
             type="com.globallogic.app.PokemonViewModel" />
-
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#D7DDE3">
-
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -31,6 +28,7 @@
                 android:id="@+id/viewpager"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:padding="18sp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
@@ -38,23 +36,43 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent=".50"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent=".65">
+                app:layout_constraintTop_toTopOf="parent">
             </androidx.viewpager2.widget.ViewPager2>
-
 
             <TextView
                 android:id="@+id/tv_pokemon_name"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:gravity="center"
                 android:fontFamily="sans-serif"
-                android:textColor="#095963"
-                android:textSize="35sp"
-                app:layout_constraintHorizontal_bias="0.498"
+                android:text="@{pokemonData.name}"
+                android:textSize="28sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/viewpager" />
+
+            <TextView
+                android:id="@+id/tv_moves"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{pokemonData.moves.get(0).move.moveName}"
+                android:layout_marginTop="16dp"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name" />
+
+            <TextView
+                android:id="@+id/tv_statistics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textSize="20sp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_moves" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
