--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,13 +41,15 @@
 
             <TextView
                 android:id="@+id/tv_pokemon_name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:gravity="center"
                 android:fontFamily="sans-serif"
+                android:gravity="center"
                 android:text="@{pokemonData.name}"
                 android:textSize="28sp"
+                android:layout_marginEnd="18sp"
+                android:layout_marginStart="18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/viewpager" />
@@ -58,6 +60,8 @@
                 android:layout_height="wrap_content"
                 android:text="@{pokemonData.moves.get(0).move.moveName}"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="18sp"
+                android:layout_marginStart="18sp"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textSize="20sp"
+                android:layout_marginEnd="18sp"
+                android:layout_marginStart="18sp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
