--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="viewpagerdata"
-            type="com.globallogic.app.data.PokemonImage" />
+            name="url"
+            type="String" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -28,7 +28,7 @@
 
                 <ImageView
                     android:id="@+id/iv_pokemon"
-                    imageUrl="@{viewpagerdata.url}"
+                    imageUrl="@{url}"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
